tests/integration/features/source_code_traceability/_validation/01_req_references_non_existing_file/test.itest
#
# @relation(SDOC-SRS-33, scope=file)
#

RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail
CHECK: error: Requirement REQ-001 references a file that does not exist: file.py.
